# snippet

./: .gitignore  README.md
snippet/config/: atom-packages.md  atom.md  komodoide-prefs.xml  pep257  pep8  pycodestyle  pylintrc  ssh.conf  tmux.conf  vscode.md  webpack.config.template.js
snippet/docs/: README.md  fio.md
snippet/docs/algorithm/: README.md  algorithm-analysis-and-design.md
snippet/docs/architecture/: README.md  http-api-spec.md
snippet/docs/assembly/: linux-assembly-development-guide.md
snippet/docs/book&article/: README.md
snippet/docs/bt/: dht-proto-chinese.md
snippet/docs/c&c++/: README.md  c++.md  effective-cpp-gist-excerpt.md  more-effective-cpp-gist-excerpt.md  resource-management.md
snippet/docs/compile/: links.md  parser_generator.md
snippet/docs/compute/: README.md  how-to-teach-endian.md
snippet/docs/distributed/: README.md  cap-theory.md  consistency.md  distributed-transaction.md  etcd-example.md  link.md  zookeeper-theory.md
snippet/docs/doc/: README.md
snippet/docs/docker/: README.md
snippet/docs/document/: README.md
snippet/docs/encoding/: README.md
snippet/docs/etcd/: etcd-doc.txt  etcd-example.md
snippet/docs/gcc/: gcc-lib.md
snippet/docs/go/: README.md  go-base-syntax.md  go-base-type.md  go-expression.md  go-function.md  go-learning-note.md  go-others.md  go-package.md  go-statement.md  go-std-lib.md  go-tool-repo.md  go-version.md  net-http.md  optimization.md  packages.md  template.txt
snippet/docs/java/: README.md  packages.md
snippet/docs/js/: README.md  amd-commonjs-umd.md  apply-call-bind.md  es2016-es2017.md  es2016-overview.md  faq.md  javascript.md  javascript.txt  js-quick-reference.md  packages.md  webpack-plugins.md
snippet/docs/kubernetes/: README.md
snippet/docs/linux/: README.md  generic-netlink-howto.txt
snippet/docs/markdown/: cheatsheet.md
snippet/docs/openstack/: README.md  link.md
snippet/docs/package/: fpm.md
snippet/docs/python/: README.md  builtin.md  django-form.md  link.md  logging.md  pastedeploy.md  pypi_source.md  python-advance-app.md  python-advanced-feature.md  python-appendix.md  python-attr.md  python-base.md  python-c-extension.md  python-class.md  python-exception.md  python-expression-statement.md  python-file-encoding.md  python-function.md  python-operator-overload.md  python-other-key-point.md  (+5 more)
snippet/example/python/project/: METADATA  PKG-INFO  logging.ini  project.conf  requirements.txt  setup.cfg  setup.py
snippet/example/python/project/project/: __init__.py  _options.py  main.py
snippet/example/python/project/project/common/: utils.py
snippet/example/python/project/project/db/: __init__.py  api.py
snippet/example/python/project/project/db/sqlalchemy/: api.py  base.py  models.py
snippet/example/python/project/test/: test.py
snippet/software/: symbol-fonts_1.2_all.deb
(+290 files in other folders)
