[metadata]
name = {PROJECT}

[files]
packages =
    {PROJECT}

[entry_points]
{PROJECT}.{XX}.{YY}.{ZZ} =
    # {AA}, {BB}, {CC} are modules, and {ATTR} is the attribution of the module.
    {AA} = {BB}.{CC}:{ATTR}
    {DD} = {EE}:{ATTR}

console_scripts =
    # {CALLABLE} is a callable object.
    {CMD1} = {AA}.{BB}:{CALLABLE}
    {CMD2} = {CC}.{DD}.{EE}:{CALLABLE}

[global]
setup-hooks =

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
# Have pbr generate the module indexes like sphinx autodoc
autodoc_index_modules = True

# Exclude modules that won't build with autodoc (or that we don't want doc'ed);
# this requires updating the exclude_patterns variable in doc/source/conf.py
#autodoc_exclude_modules =
#    {PROJECT}.test.*
#    {PROJECT}.{XX}.*

# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
